Update My contact information.html

--- a/My contact information.html
+++ b/My contact information.html
@@ -7,7 +7,7 @@
   <body>
     <h2>My Contact Information:</h2>
       <p><a href="https://www.linkedin.com/in/amirata-hasheminazemi/" target="_blank"><strong>Linkedin</strong></a></p>
-      <p><a href="https://www.instagram.com/momentary_bnw/" target="_blank"><strong>Instagram</strong></a></p>
+      <p><a href="https://www.instagram.com/momentary_shot/" target="_blank"><strong>Instagram</strong></a></p>
       <p><a href="mailto:amirata.nazemi@gmail.com">Email</a></p><br>
     <hr size='3' noshade><br>
 
